Logos and Ext info

--- a/popup.html
+++ b/popup.html
@@ -7,19 +7,14 @@
     <link rel="stylesheet" href="./popup.css" />
   </head>
   <body>
-    <template id="li_template">
-      <li>
-        <a>
-          <h3 class="title">Tab Title</h3>
-          <p class="pathname">Tab Pathname</p>
-        </a>
-      </li>
-    </template>
-
-    <h1>Skyharbor Distinguish</h1>
-    <button>Group Tabs</button>
-    <ul></ul>
-
+    <h2>Skyharbor Distinguish ⛴</h2>
+    <div>To quickly distinguish between dev, stg, and prod tabs</div>
+    <hr />
+    <strong>Version: </strong>v1.0.0
+    <br />
+    <strong>Release Date: </strong>25 Aug 2022
+    <br />
+    <strong>Contact: </strong>chloe.tan@certik.com
     <script src="./popup.js" type="module"></script>
   </body>
 </html>
