--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,15 @@
   </head>
   <body>
     <h2>Skyharbor Distinguish ⛴</h2>
+    <hr />
     <div>To quickly distinguish between dev, stg, and prod tabs</div>
     <hr />
+    <!-- <strong>Active/Inactive</strong>
+    <label class="switch">
+      <input type="checkbox">
+      <span class="slider round"></span>
+    </label>
+    <hr /> -->
     <strong>Version: </strong>v1.0.0
     <br />
     <strong>Release Date: </strong>25 Aug 2022
