--- a/popup.html
+++ b/popup.html
@@ -22,6 +22,8 @@
     <strong>Release Date: </strong>25 Aug 2022
     <br />
     <strong>Contact: </strong>chloe.tan@certik.com
+    <br/>
+    <strong>Source: </strong><a target="_blank" href="https://github.com/chloe-tan/skyharbor-distinguish">Github</a>
     <script src="./popup.js" type="module"></script>
   </body>
 </html>
