--- a/popup.html
+++ b/popup.html
@@ -11,12 +11,12 @@
     <hr />
     <div>To quickly distinguish between dev, stg, and prod tabs</div>
     <hr />
-    <!-- <strong>Active/Inactive</strong>
-    <label class="switch">
-      <input type="checkbox">
+    <strong>Modify prod tabs </strong>
+    <label for="prodModEnabled" class="switch">
+      <input id="prodModEnabled" name="prodModEnabled" type="checkbox">
       <span class="slider round"></span>
     </label>
-    <hr /> -->
+    <hr />
     <strong>Version: </strong>v1.0.0
     <br />
     <strong>Release Date: </strong>25 Aug 2022
